TOB-1935: Utvidet api/kontrakt til å kunne ha med x-correlation-id
